# NieS

./: .gitignore  CAHIER_DE_CHARGE.md  CMakeLists.txt  LICENSE  NieSApp.pro  PROJECT_PROGRES.md  README.md  config.example.ini  config.ini
.github/workflows/: ci.yml
database/: migrate.sh  seed.sql
database/migrations/: 001_add_discount_to_products.sql  002_add_barcode_to_products.sql
database/schema/: employees.sql  init.sql  inventory.sql  loyalty_accounts.sql  loyalty_transactions.sql  products.sql  returns.sql  sales.sql  schema_migrations.sql  shifts.sql  users.sql
examples/connectdb/: CMakeLists.txt  README.md  main.cpp
mobile/: CMakeLists.txt  RestClient.cpp  RestClient.h  main.cpp
mobile/qml/: Main.qml
src/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  InventoryManager.cpp  InventoryManager.h  NetworkMonitor.cpp  NetworkMonitor.h  ProductManager.cpp  ProductManager.h  SalesManager.cpp  SalesManager.h  UserManager.cpp  UserManager.h  UserSession.cpp  UserSession.h  main.cpp
src/api/: CMakeLists.txt  RestServer.cpp  RestServer.h  main.cpp
src/barcode/: BarcodeScanner.cpp  BarcodeScanner.h
src/dashboard/: DashboardWindow.cpp  DashboardWindow.h
src/employees/: EmployeeManager.cpp  EmployeeManager.h  EmployeeWindow.cpp  EmployeeWindow.h
src/inventory/: InventoryWindow.cpp  InventoryWindow.h
src/invoices/: InvoicePrinter.cpp  InvoicePrinter.h
src/login/: LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  UserWindow.cpp  UserWindow.h
src/loyalty/: LoyaltyManager.cpp  LoyaltyManager.h  LoyaltyWindow.cpp  LoyaltyWindow.h
src/payments/: PaymentProcessor.cpp  PaymentProcessor.h
src/products/: ProductWindow.cpp  ProductWindow.h
src/returns/: ReturnManager.cpp  ReturnManager.h
src/sales/: POSWindow.cpp  POSWindow.h  SalesReportWindow.cpp  SalesReportWindow.h
src/stock/: StockPrediction.cpp  StockPrediction.h  StockPredictionWindow.cpp  StockPredictionWindow.h
tests/: CMakeLists.txt  barcode_scanner_test.cpp  barcode_scanner_test.h  config_option_test.cpp  config_option_test.h  dashboard_window_test.cpp  dashboard_window_test.h  database_test.cpp  employee_manager_test.cpp  employee_manager_test.h  employee_window_test.cpp  employee_window_test.h  inventory_window_test.cpp  inventory_window_test.h  invoice_printer_test.cpp  invoice_printer_test.h  login_test.cpp  login_test.h  loyalty_manager_test.cpp  loyalty_manager_test.h  main_window_test.cpp  main_window_test.h  payment_processor_test.cpp  payment_processor_test.h  pos_window_test.cpp  pos_window_test.h  product_window_test.cpp  product_window_test.h  rest_server_test.cpp  rest_server_test.h  return_manager_test.cpp  return_manager_test.h  sales_report_window_test.cpp  sales_report_window_test.h  stock_prediction_test.cpp  stock_prediction_test.h  user_window_test.cpp  user_window_test.h
translations/: NieS_fr.ts
